--- a/style.css
+++ b/style.css
@@ -11,21 +11,23 @@
 
 body{
     display: flex;
-    justify-content: center;
-    text-align: center;
 }
 
 img{
     height: 100vh;
+    width: 35vw;
     margin: 0;
     padding: 0;
+    object-fit: cover;
 }
 
 #form{
+    flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     text-align: left;
+    
 }
 
 p{
@@ -44,8 +46,35 @@ p{
 #form1{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    gap: 20px;
+    padding: 0 50px;
+}
+
+.row1, .row2, .row3{
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+input {
+    padding: 4px;
+    font-size: 1rem;
+}
+
+
+.elem{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.second{
+    border-bottom: 1px solid #ccc;
+    padding: 40px;
+}
+
+.second > p{
+    margin-bottom: 30px;
 }
 
 .third button{
