--- a/style.css
+++ b/style.css
@@ -13,7 +13,36 @@ body{
     display: flex;
 }
 
-img{
+#image{
+    position: relative;
+}
+
+.logo{
+    position: absolute;
+    top: 200px;
+    left: 0;         
+    display: flex;      
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    height: 15vh;
+    width: 35vw;
+    
+}
+
+.logo > img{
+    height: 100px;
+    width: auto;
+}
+
+.logo > h3{
+    font-family: norse-bold;
+    color: #ccc;
+    font-size: 80px;
+}
+
+#image > img{
     height: 100vh;
     width: 35vw;
     margin: 0;
@@ -27,7 +56,7 @@ img{
     flex-direction: column;
     justify-content: space-evenly;
     text-align: left;
-    
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 p{
@@ -41,6 +70,13 @@ p{
 
 #para2{
     margin-top: 30px;
+}
+
+.second{
+    background-color: white;
+    border-bottom: 1px solid #ccc;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    padding: 40px;
 }
 
 #form1{
@@ -68,11 +104,6 @@ input {
     flex-direction: column;
 }
 
-.second{
-    border-bottom: 1px solid #ccc;
-    padding: 40px;
-}
-
 .second > p{
     margin-bottom: 30px;
 }
@@ -91,6 +122,18 @@ input {
     margin-top: 30px;
 }
 
+a{
+    color: #596D48;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+input:invalid {
+  background-color: ivory;
+  border: none;
+  outline: 2px solid red;
+  border-radius: 5px;
+}
 
 
 
